images renamed + fixed images visibility on github pages

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -217,7 +217,7 @@ header {
 
 .team {
 	position: relative;
-	background-image: url('/img/team/team-bg.jpg');
+	background-image: url('../img/team/team_bg.jpg');
 	background-attachment: fixed;
 	background-size: cover;
 	z-index: 0;
@@ -277,7 +277,7 @@ header {
 
 .contact {
 	position: relative;
-	background-image: url('../img/contact-hero.jpg');
+	background-image: url('../img/contact_hero.jpg');
 	background-position: bottom;
 	background-attachment: fixed;
 	background-size: cover;
